--- a/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
+++ b/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
@@ -67,6 +67,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="fileDefination.cs" />
+    <Compile Include="FrmActivation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmActivation.Designer.cs">
+      <DependentUpon>FrmActivation.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerAdress.cs" />
     <Compile Include="SystemManager.cs" />
+    <EmbeddedResource Include="FrmActivation.resx">
+      <DependentUpon>FrmActivation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
