--- a/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
+++ b/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cameras.cs" />
     <Compile Include="fileDefination.cs" />
     <Compile Include="FrmActivation.cs">
       <SubType>Form</SubType>
