--- a/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
+++ b/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
@@ -168,5 +168,8 @@
   <ItemGroup>
     <Content Include="Adsız.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
