--- a/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
+++ b/MaviSoftServerV1.0/MaviSoftServerV1.0.csproj
@@ -109,6 +109,9 @@
     <Compile Include="Panel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendSms.cs" />
+    <Compile Include="SmsOperationCode.cs" />
+    <Compile Include="SmsSettings.cs" />
     <Compile Include="SqlServerAdress.cs" />
     <Compile Include="SystemManager.cs" />
     <EmbeddedResource Include="FrmActivation.resx">
