--- a/MaviSoftServerV1.0/App.config
+++ b/MaviSoftServerV1.0/App.config
@@ -6,5 +6,7 @@
   <appSettings>
     <add key="Host" value=""/>
     <add key="SQLServer" value=""/>
+    <add key="UserID" value=""/>
+    <add key="Password" value=""/>
   </appSettings>
 </configuration>
